--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html>
+<link rel="stylesheet" type="text/css" href="../semantic/dist/semantic.min.css">
+<script src="../semantic/dist/semantic.min.js"></script>
 <head>
   <meta charset="utf-8">
   <title>TableDemo</title>
